--- a/Week-4/p4/P4.ipynb
+++ b/Week-4/p4/P4.ipynb
@@ -37,7 +37,10 @@
      "start_time": "2024-08-18T01:30:21.790508Z"
     }
    },
-   "source": "import pandas as pd",
+   "source": [
+    "# Note: For all data sources, I am storing a local copy to avoid broken links (404s)\n",
+    "import pandas as pd"
+   ],
    "outputs": [],
    "execution_count": 1
   },
@@ -676,7 +679,6 @@
    "source": [
     "# write you code here\n",
     "# Context: World of Warcraft (MMORPG video game released in 2004 - present)\n",
-    "\n",
     "wow_auc_data  = pd.read_csv('auctions.csv')\n",
     "display(wow_auc_data.head(5))\n",
     "\n",
