fix datatime casting on pd df

--- a/Week-5/p5/P5.ipynb
+++ b/Week-5/p5/P5.ipynb
@@ -407,16 +407,16 @@
     {
      "data": {
       "text/plain": [
-       "Date             object\n",
-       "AveragePrice    float64\n",
-       "Total Volume    float64\n",
-       "Total Bags      float64\n",
-       "Small Bags      float64\n",
-       "Large Bags      float64\n",
-       "XLarge Bags     float64\n",
-       "type             object\n",
-       "year              int64\n",
-       "region           object\n",
+       "Date            datetime64[ns]\n",
+       "AveragePrice           float64\n",
+       "Total Volume           float64\n",
+       "Total Bags             float64\n",
+       "Small Bags             float64\n",
+       "Large Bags             float64\n",
+       "XLarge Bags            float64\n",
+       "type                    object\n",
+       "year                     int64\n",
+       "region                  object\n",
        "dtype: object"
       ]
      },
@@ -427,7 +427,7 @@
    ],
    "source": [
     "# write your code here\n",
-    "pd.to_datetime(data.Date, format='mixed') # Mixing as I do not know all of the Date formats in the data set\n",
+    "data.Date = pd.to_datetime(data.Date) # Mixing as I do not know all of the Date formats in the data set\n",
     "data.dtypes"
    ]
   },
@@ -474,19 +474,19 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "Index: 17911 entries, 0 to 18248\n",
       "Data columns (total 10 columns):\n",
-      " #   Column        Non-Null Count  Dtype  \n",
-      "---  ------        --------------  -----  \n",
-      " 0   Date          17911 non-null  object \n",
-      " 1   AveragePrice  17911 non-null  float64\n",
-      " 2   Total Volume  17911 non-null  float64\n",
-      " 3   Total Bags    17911 non-null  float64\n",
-      " 4   Small Bags    17911 non-null  float64\n",
-      " 5   Large Bags    17911 non-null  float64\n",
-      " 6   XLarge Bags   17911 non-null  float64\n",
-      " 7   type          17911 non-null  object \n",
-      " 8   year          17911 non-null  int64  \n",
-      " 9   region        17911 non-null  object \n",
-      "dtypes: float64(6), int64(1), object(3)\n",
+      " #   Column        Non-Null Count  Dtype         \n",
+      "---  ------        --------------  -----         \n",
+      " 0   Date          17911 non-null  datetime64[ns]\n",
+      " 1   AveragePrice  17911 non-null  float64       \n",
+      " 2   Total Volume  17911 non-null  float64       \n",
+      " 3   Total Bags    17911 non-null  float64       \n",
+      " 4   Small Bags    17911 non-null  float64       \n",
+      " 5   Large Bags    17911 non-null  float64       \n",
+      " 6   XLarge Bags   17911 non-null  float64       \n",
+      " 7   type          17911 non-null  object        \n",
+      " 8   year          17911 non-null  int64         \n",
+      " 9   region        17911 non-null  object        \n",
+      "dtypes: datetime64[ns](1), float64(6), int64(1), object(2)\n",
       "memory usage: 1.5+ MB\n"
      ]
     }
